--- a/index.html
+++ b/index.html
@@ -3,9 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>html project</title>
+    <title>AL-Powered Credit Repair and management</title>
+
+    <!-- css link  -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+       <!-- Favicon -->
+       <link
+       rel="shortcut icon"
+       href="assets/images/logos/favicon.webp"
+       type="image/x-icon" />
+
+        <!-- FontAwesome CDN -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>this is a he1</h1>
+    <!-- ===================================== -->
+    <!--===== header section starts here ===== -->
+    <!-- ===================================== -->
+
+    <div class="header-section">
+        <div class="container">
+            <div class="header-container">
+
+                <!-- logo  -->
+                <a href="#" class="logo">
+                    <img src="assets/images/logos/logo.webp" alt="#">
+                </a>
+
+                <!-- navbar and buttons section -->
+                <div class="navbar-buttons">
+                    <nav class="navbar">
+                        <ul>
+                            <li>
+                                <a href="#">How AI Works</a>
+                            </li>
+                            <li>
+                                <a href="#">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="#">Build Credit</a>
+                            </li>
+                            <li>
+                                <a href="#">contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <!-- buttons section -->
+                    <div class="buttons">
+
+                        <a href="#" class="light-button">Login</a>
+                        <a href="#" class="dark-button">
+                            <span>Register</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
