--- a/index.html
+++ b/index.html
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-Powered Credit Repair and Management</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI-Powered Credit Repair and management</title>
 
     <!-- css link  -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
-    <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      href="assets/images/logos/favicon.webp"
-      type="image/x-icon" />
+       <!-- Favicon -->
+       <link
+       rel="shortcut icon"
+       href="assets/images/logos/favicon.webp"
+       type="image/x-icon" />
 
-    <!-- FontAwesome CDN -->
+        <!-- FontAwesome CDN -->
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
-  </head>
-  <body>
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
+</head>
+<body>
     <!-- ===================================== -->
     <!--===== header section starts here ===== -->
     <!-- ===================================== -->
 
     <div class="header-section">
-      <div class="container">
-        <div class="header-container">
-          <!-- logo  -->
-          <a href="#" class="logo">
-            <img src="assets/images/logos/logo.webp" alt="#" />
-          </a>
+        <div class="container">
+            <div class="header-container">
 
-          <!-- navbar and buttons section -->
-          <div class="navbar-buttons">
-            <nav class="navbar">
-              <ul>
-                <li>
-                  <a href="#">How AI Works</a>
-                </li>
-                <li>
-                  <a href="#">FAQ</a>
-                </li>
-                <li>
-                  <a href="#">Build Credit</a>
-                </li>
-                <li>
-                  <a href="#">contact</a>
-                </li>
-              </ul>
-            </nav>
+                <!-- logo  -->
+                <a href="#" class="logo">
+                    <img src="assets/images/logos/logo.webp" alt="#">
+                </a>
 
-            <!-- buttons section -->
-            <div class="buttons">
-              <a href="#" class="light-button">Login</a>
-              <a href="#" class="dark-button">
-                <span>Register</span>
-              </a>
+                <!-- navbar and buttons section -->
+                <div class="navbar-buttons">
+                    <nav class="navbar">
+                        <ul>
+                            <li >
+                                <a href="#" class="active">How AI Works</a>
+                            </li>
+                            <li >
+                                <a href="#">FAQ</a>
+                            </li>
+                            <li >
+                                <a href="#">Build Credit</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <!-- buttons section -->
+                    <div class="buttons">
+
+                        <a href="#" class="light-button">Login</a>
+                        <a href="#" class="dark-button">
+                            <span>Register</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- responsive button menu  -->
+                <label class="responsive-menu-btn">
+                  <i class="fas fa-bars"></i>
+                  <input type="checkbox" id="responsiveMenuBtn">
+                </label>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </body>
+     <!-- ===================================== -->
+    <!--===== header section ends here ===== -->
+    <!-- ===================================== -->
+</body>
 </html>
