Index File Has Updated
Some changes have been made which are necessary in our project.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--===== header section starts here ===== -->
     <!-- ===================================== -->
 
-    <div class="header-section">
+    <section class="header-section">
         <div class="container">
             <div class="header-container">
 
@@ -37,7 +37,7 @@
                     <img src="assets/images/logos/logo.webp" alt="#">
                 </a>
 
-                <!-- navbar and buttons section -->
+                <!-- navbar and buttons -->
                 <div class="navbar-buttons">
                     <nav class="navbar">
                         <ul>
@@ -56,7 +56,7 @@
                         </ul>
                     </nav>
 
-                    <!-- buttons section -->
+                    <!-- buttons  -->
                     <div class="buttons">
 
                         <a href="#" class="light-button">Login</a>
@@ -73,7 +73,7 @@
                 </label>
             </div>
         </div>
-    </div>
+    </section>
      <!-- ===================================== -->
     <!--===== header section ends here ===== -->
     <!-- ===================================== -->
